--- a/Shop/css/style.css
+++ b/Shop/css/style.css
@@ -1,10 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 html {
   height: 100%;
+  font-family: sans-serif, serif;
   font-size: 14px;
 }
 
@@ -20,16 +16,27 @@ body {
 
 header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  height: 70px;
+  height: 90px;
   transform: scale(1.005);
   background-color: #65B293;
   box-shadow: 0 4px 4px -2px #083728;
 }
 
+.header__logo {
+  margin-left: 50px;
+}
+
 .header__btn {
-  margin-left: auto;
   margin-right: 50px;
+}
+
+.logo {
+  text-transform: uppercase;
+  font-family: 'Dancing Script', cursive;
+  font-size: 2.7rem;
+  color: #fff;
 }
 
 .btn-cart {
@@ -55,7 +62,7 @@ header {
 
 main {
   width: 100%;
-  height: 100%;
+  flex: 1;
   box-sizing: border-box;
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
@@ -63,33 +70,56 @@ main {
 
 .products {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   padding-top: 30px;
 }
 
 .product-item {
-  width: 150px;
-  height: 200px;
+  width: 200px;
+  height: 300px;
   margin-left: 20px;
   margin-right: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   box-sizing: border-box;
-  border: 1px solid #ccc;
   transition: box-shadow 0.3s;
 }
 
 .product-item:hover {
-  box-shadow: 0 0 0 2px #aaa;
-  /*border: 3px solid #000 ;*/
+  box-shadow: 0 0 0 1px #ddd;
 }
 
-.product-item h3 {
+.desc {
+  padding: 5px 10px;
+}
+
+.desc h3 {
   margin-top: 7px;
   margin-bottom: 10px;
+  font-size: 1.3rem;
   text-align: center;
 }
 
-.product-item p {
-  padding: 5px;
+.desc p {
+  padding-top: 5px;
+  text-align: center;
+  font-size: 1.1rem;
+}
+
+.btn-buy {
+  width: 100%;
+  height: 40px;
+  font-size: 1.2rem;
+  background-color: #fff;
+  border: 1px solid #66A1D2;
+  border-radius: 5px;
+  color: #0B5FA5;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.btn-buy:hover {
+  background-color: #66A1D2;
+  border: 1px solid transparent;
+  color: #fff;
 }
