--- a/Shop/css/style.css
+++ b/Shop/css/style.css
@@ -15,10 +15,11 @@ body {
 }
 
 header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 90px;
+  min-height: 90px;
   transform: scale(1.005);
   background-color: #65B293;
   box-shadow: 0 4px 4px -2px #083728;
@@ -60,6 +61,86 @@ header {
   box-shadow: 1px 2px 0 #4D002A;
 }
 
+.cart {
+  display: none;
+  position: absolute;
+  top: 70px;
+  right: 10px;
+  width: 250px;
+  box-sizing: border-box;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+
+.cart-item {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 25px;
+}
+
+.cart-item:last-child {
+  margin-bottom: 0;
+}
+
+.cart-item__desc {
+  margin-left: 10px;
+}
+
+.cart-item h3 {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.cart-item p {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.cart-item__btn {
+  position: absolute;
+  top: 35%;
+  right: 0;
+}
+
+.btn-cancel {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  font-size: 0.8rem;
+  color: #505050;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.btn-cancel:hover {
+  background-color: #505050;
+  border: 1px solid #505050;
+  color: #fff;
+}
+
+.btn-goToCart {
+  width: 100%;
+  height: 40px;
+  background-color: #66A1D2;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.btn-goToCart:hover {
+  background-color: #fff;
+  border: 1px solid #66A1D2;
+  color: #66A1D2;
+}
+
 main {
   width: 100%;
   flex: 1;
@@ -89,24 +170,24 @@ main {
   box-shadow: 0 0 0 1px #ddd;
 }
 
-.desc {
+.product-item__desc {
   padding: 5px 10px;
 }
 
-.desc h3 {
+.product-item__desc h3 {
   margin-top: 7px;
   margin-bottom: 10px;
   font-size: 1.3rem;
   text-align: center;
 }
 
-.desc p {
+.product-item__desc p {
   padding-top: 5px;
   text-align: center;
   font-size: 1.1rem;
 }
 
-.btn-buy {
+.product-item__btn-buy {
   width: 100%;
   height: 40px;
   font-size: 1.2rem;
@@ -118,7 +199,7 @@ main {
   transition: all 0.4s;
 }
 
-.btn-buy:hover {
+.product-item__btn-buy:hover {
   background-color: #66A1D2;
   border: 1px solid transparent;
   color: #fff;
