--- a/Shop/css/style.css
+++ b/Shop/css/style.css
@@ -65,11 +65,12 @@ header {
   position: absolute;
   top: 70px;
   right: 10px;
-  width: 250px;
+  width: 300px;
   box-sizing: border-box;
   padding: 10px;
   background-color: #fff;
   border: 1px solid #ddd;
+  border-radius: 3px;
   opacity: 0;
   transition: opacity .5s;
 }
@@ -92,13 +93,29 @@ header {
 }
 
 .cart-item h3 {
-  margin-top: 0;
-  margin-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 2px;
+  font-size: 1.05rem;
 }
 
 .cart-item p {
   margin-top: 0;
   margin-bottom: 5px;
+  font-size: .7rem;
+}
+
+.cart-item__total {
+  margin-top: 12px;
+  font-size: .9rem;
+  color: #7c7c7c;
+}
+
+.cart-item__qty,
+.cart-item__sum {
+  display: inline-block;
+  padding: 3px 5px;
+  border: 1px solid #ccc;
+  color: #323232;
 }
 
 .cart-item__btn {
@@ -114,16 +131,24 @@ header {
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 50%;
-  font-size: 0.8rem;
+  font-size: .8rem;
   color: #505050;
   cursor: pointer;
-  transition: all 0.4s;
+  transition: all .4s;
 }
 
 .btn-cancel:hover {
   background-color: #505050;
   border: 1px solid #505050;
   color: #fff;
+}
+
+.cart-total {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: center;
+  font-size: 1.05rem;
+  font-weight: 600;
 }
 
 .btn-goToCart {
@@ -135,7 +160,7 @@ header {
   color: #fff;
   font-weight: 600;
   cursor: pointer;
-  transition: all 0.4s;
+  transition: all .4s;
 }
 
 .btn-goToCart:hover {
@@ -160,13 +185,14 @@ main {
 }
 
 .product-item {
-  width: 200px;
-  height: 300px;
+  width: 210px;
+  height: 295px;
   margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 40px;
+  padding: 5px;
   box-sizing: border-box;
-  transition: box-shadow 0.3s;
+  transition: box-shadow .3s;
 }
 
 .product-item:hover {
@@ -199,7 +225,7 @@ main {
   border-radius: 5px;
   color: #0B5FA5;
   cursor: pointer;
-  transition: all 0.4s;
+  transition: all .4s;
 }
 
 .product-item__btn-buy:hover {
